# motor_damiao_hardware

./: CMakeLists.txt  README.md  motor_damiao_hardware_plugin.xml  package.xml
include/motor_damiao_hardware/: DaMiaoMotionTranslation.hpp  DaMiaoSocketCanDriver.hpp  MotorErrorCode.hpp  motor_damiao_robot.hpp  visibility_control.h
motor_damiao_hardware/: CMakeLists.txt  package.xml
motor_damiao_hardware/example/: motor_damiao.ros2_control.urdf
motor_damiao_hardware/include/motor_damiao_hardware/: DaMiaoMotionTranslation.hpp  DaMiaoSocketCanDriver.hpp  motor_damiao_robot.hpp
motor_damiao_hardware/scripts/: install_ros2_control.sh
motor_damiao_hardware/src/: DaMiaoMotionTranslation.cpp  DaMiaoSocketCanDriver.cpp  motor_damiao_robot.cpp
motor_interfaces/: CMakeLists.txt  package.xml
motor_interfaces/msg/: JointState.msg  JointStates.msg
src/: DaMiaoMotionTranslation.cpp  DaMiaoSocketCanDriver.cpp  motor_damiao_robot.cpp
